# fftw-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Notes.md  README.md  format.sh  test-wrapper.cpp  test.cpp
.github/workflows/: cmake-fftw.yml  lint.yml  ubuntu.yml  unit-tests.yml
cmake/: FindFFTW3.cmake
examples/: CMakeLists.txt  c2c-1d.cpp
include/fftw-cpp/: basic_buffer.h  basic_plan.h  fftw-cpp.h  include_mdspan.h  util.h
test/: CMakeLists.txt  helper.cpp  test-1d-c2c.cpp  test-2d-r2c.cpp  test-mdspan.cpp  test-plan.cpp  test-r2c-2d.cpp  test-wrapper-2d.cpp  util.hpp
